# passwordmeter

./: .flake8  CHANGELOG.rst  TODO.txt  pyproject.toml  setup.py
passwordmeter/: __init__.py  common.py  test_passwordmeter.py
src/passwordmeter/: cli.py  i18n.py
